--- a/.github/workflows/nix-build.yaml
+++ b/.github/workflows/nix-build.yaml
@@ -24,10 +24,19 @@ jobs:
   create-pr:
     runs-on: ubuntu-latest
     needs: build
-    if: needs.build.result == 'failure'
+    if: ${{ always() && needs.build.result == 'failure' }}
     steps:
+      - name: Checkout
+        uses: actions/checkout@v5.0.0
+
+      - name: Install Nix
+        uses: cachix/install-nix-action@v31.8.0
+        with:
+          nix_path: nixpkgs=channel:nixos-unstable
+
       - name: Rebuild with Python
-        run: ./update.py
+        run: |
+          nix-shell -p "python3.withPackages (ps: with ps; [ requests ])" --run "python update.py"
 
       - name: Create Pull Request
         if: 
